[components] Fixed PhaseAnnouncement alignment

--- a/src/components/phases/PhaseAnnouncement.scss
+++ b/src/components/phases/PhaseAnnouncement.scss
@@ -1,3 +1,5 @@
+@use 'styles/sass' as *;
+
 .phase-announcement-overlay {
   width: 100%;
   height: 100%;
@@ -11,7 +13,7 @@
 }
 
 .phase-announcement-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
